feat: user profile and edit user data methods
